[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/Light.png" type="Texture" id=4]
[ext_resource path="res://Textures/Wall.tres" type="TileSet" id=5]
[ext_resource path="res://Textures/Ship.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 81, 98 )

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -4168, -2781 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 7, -1 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="Player"]
position = Vector2( 0, 5 )
texture = ExtResource( 4 )
color = Color( 0.454902, 0.356863, 0.533333, 1 )
shadow_enabled = true

[node name="TurnAxis" type="Position2D" parent="Player"]

[node name="ShootingPoint" type="Position2D" parent="Player/TurnAxis"]
position = Vector2( 95, 0 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( -2029, -2597 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.309804, 0.054902, 0.439216, 1 )
position = Vector2( 777, 349 )
scale = Vector2( 4937.11, 1688.87 )
z_index = -1
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -1572900, 0, 0, -1572899, 0, 0, -1572898, 0, 0, -1572897, 0, 0, -1572896, 0, 0, -1572895, 0, 0, -1572894, 0, 0, -1572893, 0, 0, -1572892, 0, 0, -1572891, 0, 0, -1572890, 0, 0, -1572889, 0, 0, -1572888, 0, 0, -1572887, 0, 0, -1572886, 0, 0, -1572885, 0, 0, -1572884, 0, 0, -1572883, 0, 0, -1572882, 0, 0, -1572881, 0, 0, -1572880, 0, 0, -1572879, 0, 0, -1572878, 0, 0, -1572877, 0, 0, -1572876, 0, 0, -1572875, 0, 0, -1572874, 0, 0, -1572873, 0, 0, -1572872, 0, 0, -1572871, 0, 0, -1572870, 0, 0, -1572869, 0, 0, -1572868, 0, 0, -1572867, 0, 0, -1572866, 0, 0, -1572865, 0, 0, -1638400, 0, 0, -1638399, 0, 0, -1638398, 0, 0, -1638397, 0, 0, -1638396, 0, 0, -1638395, 0, 0, -1638394, 0, 0, -1638393, 0, 0, -1638392, 0, 0, -1638391, 0, 0, -1638390, 0, 0, -1638389, 0, 0, -1638388, 0, 0, -1638387, 0, 0, -1638386, 0, 0, -1638385, 0, 0, -1638384, 0, 0, -1638383, 0, 0, -1638382, 0, 0, -1638381, 0, 0, -1638380, 0, 0, -1638379, 0, 0, -1638378, 0, 0, -1638377, 0, 0, -1638376, 0, 0, -1638375, 0, 0, -1638374, 0, 0, -1638373, 0, 0, -1638372, 0, 0, -1638371, 0, 0, -1638370, 0, 0, -1638369, 0, 0, -1638368, 0, 0, -1638367, 0, 0, -1638366, 0, 0, -1638365, 0, 0, -1638364, 0, 0, -1638363, 0, 0, -1638362, 0, 0, -1638361, 0, 0, -1638360, 0, 0, -1638359, 0, 0, -1638358, 0, 0, -1638357, 0, 0, -1638356, 0, 0, -1638355, 0, 0, -1638354, 0, 0, -1638353, 0, 0, -1507364, 0, 0, -1572817, 0, 0, -1441828, 0, 0, -1507281, 0, 0, -1376292, 0, 0, -1441745, 0, 0, -1310756, 0, 0, -1376209, 0, 0, -1245220, 0, 0, -1310673, 0, 0, -1179684, 0, 0, -1245137, 0, 0, -1114148, 0, 0, -1179601, 0, 0, -1048612, 0, 0, -1114065, 0, 0, -983076, 0, 0, -1048529, 0, 0, -917540, 0, 0, -982993, 0, 0, -852004, 0, 0, -917457, 0, 0, -786468, 0, 0, -851921, 0, 0, -720932, 0, 0, -786385, 0, 0, -655396, 0, 0, -720849, 0, 0, -589860, 0, 0, -655313, 0, 0, -524324, 0, 0, -589777, 0, 0, -458788, 0, 0, -524241, 0, 0, -393252, 0, 0, -458705, 0, 0, -327716, 0, 0, -393169, 0, 0, -262180, 0, 0, -327633, 0, 0, -196644, 0, 0, -262097, 0, 0, -131108, 0, 0, -196561, 0, 0, -65572, 0, 0, -131025, 0, 0, -36, 0, 0, -65489, 0, 0, 65500, 0, 0, 47, 0, 0, 131036, 0, 0, 65583, 0, 0, 196572, 0, 0, 131119, 0, 0, 262108, 0, 0, 196655, 0, 0, 327644, 0, 0, 262191, 0, 0, 393180, 0, 0, 327727, 0, 0, 458716, 0, 0, 393263, 0, 0, 524252, 0, 0, 458799, 0, 0, 589788, 0, 0, 524335, 0, 0, 655324, 0, 0, 589871, 0, 0, 720860, 0, 0, 655407, 0, 0, 786396, 0, 0, 720943, 0, 0, 851932, 0, 0, 786479, 0, 0, 917468, 0, 0, 852015, 0, 0, 983004, 0, 0, 917551, 0, 0, 1048540, 0, 0, 983087, 0, 0, 1114076, 0, 0, 1114077, 0, 0, 1114078, 0, 0, 1114079, 0, 0, 1114080, 0, 0, 1114081, 0, 0, 1114082, 0, 0, 1114083, 0, 0, 1114084, 0, 0, 1114085, 0, 0, 1114086, 0, 0, 1114087, 0, 0, 1114088, 0, 0, 1114089, 0, 0, 1114090, 0, 0, 1114091, 0, 0, 1114092, 0, 0, 1114093, 0, 0, 1114094, 0, 0, 1114095, 0, 0, 1114096, 0, 0, 1114097, 0, 0, 1114098, 0, 0, 1114099, 0, 0, 1114100, 0, 0, 1114101, 0, 0, 1114102, 0, 0, 1114103, 0, 0, 1114104, 0, 0, 1114105, 0, 0, 1114106, 0, 0, 1114107, 0, 0, 1114108, 0, 0, 1114109, 0, 0, 1114110, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0 )

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
